app/auth/dex/namespace.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.dex.namespace
  labels:
    name: #@ data.values.dex.namespace
