app/auth/dex/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  namespace: #@ data.values.dex.namespace
  labels: #@ data.values.dex.matchLabels
spec:
  replicas: 1
  selector:
    matchLabels: #@ data.values.dex.matchLabels
  template:
    metadata:
      labels: #@ data.values.dex.matchLabels
    spec:
      serviceAccountName: dex
      volumes:
      - name: config
        configMap:
          name: dex
          items:
          - key: config.yaml
            path: config.yaml
      - name: tz-config
        hostPath:
          path: #@ "/usr/share/zoneinfo/" + data.values.timezone
      containers:
      - image: quay.io/dexidp/dex:v2.23.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        ports:
        - name: https
          containerPort: 5556
        volumeMounts:
        - name: config
          mountPath: /etc/dex/cfg
        - name: tz-config
          mountPath: /etc/localtime
