app/auth/dex/service.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: #@ data.values.dex.namespace
spec:
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector: #@ data.values.dex.matchLabels
