app/auth/dex/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dex-redirect
  namespace: #@ data.values.dex.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex-redirect
  namespace: #@ data.values.dex.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.dex.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: dex
      port: 5556
      strategy: RoundRobin
    middlewares:
    - name: dex-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dex
  namespace: #@ data.values.dex.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - https
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.dex.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: dex
      port: 5556
      strategy: RoundRobin
  tls:
    secretName: certificate-dex
